# components

./: .gitignore  BUILD_SCRIPTS_README.md  ESP-IDF-SETUP-REFERENCE.md  Makefile  build_all_examples.py  build_all_examples.sh  esp-idf-version-manager.sh  esp-setup.sh
graphics/: CMakeLists.txt  LICENSE.txt  README.md  idf_component.yml
graphics/include/: font.h  graphics.hpp  icons.h  logo.h  logos.h  screenLayout.hpp
graphics/src/: graphics.cpp  screenLayout.cpp
graphics/src/fonts/: nothingFont5x7.c
graphics/src/icons/: empty_16.c  empty_32.c  readme.txt
graphics/src/icons/cellular/: cell_signal_full_16.c  cell_signal_full_32.c  cell_signal_high_16.c  cell_signal_high_32.c  cell_signal_low_16.c  cell_signal_low_32.c  cell_signal_medium_16.c  cell_signal_medium_32.c  cell_signal_none_16.c  cell_signal_none_32.c  cell_signal_slash_16.c  (+3 more)
graphics/src/logo/: bwLogoNoText16x16.c  bwLogoText64x64.c  colorLogo128x128.c  colorLogo32X32.c  colorLogo64x64.c  colorLogoNoText128x128.c  colorLogoNoText32X32.c  logo16x16.c  logo32x32.c  logo48x48.c  logo64x64.c  logoText32x32.c  logoText48x48.c  logoText64x64.c
graphics/src/logos/: bwLogoNoText16x16.c  bwLogoNoText32x32.c  bwLogoNoText48x48.c  bwLogoNoText64x64.c  bwLogoText32x32.c  bwLogoText48x48.c  bwLogoText64x64.c  colorLogoNoText16x16.c  colorLogoNoText32x32.c  colorLogoNoText64x64.c
ledMatrix/: CMakeLists.txt  Kconfig  LICENSE.txt  README.md  idf_component.yml
ledMatrix/examples/x64y32/: CMakeLists.txt  README.md  esp_idf_project_configuration.json  sdkconfig.common  sdkconfig.defaults  sdkconfig.flexcore_64x32_1x2  sdkconfig.flexcore_64x64_2x4  sdkconfig.flexcore_new  sdkconfig.flexcore_old  x64y32.code-workspace
ledMatrix/include/: ESP32-HUB75-MatrixPanel-I2S-DMA.h  ledMatrix.hpp
ledMatrix/src/: ESP32-HUB75-MatrixPanel-I2S-DMA.cpp  ESP32-HUB75-MatrixPanel-I2S-DMA.h  ESP32-HUB75-MatrixPanel-leddrivers.cpp  ledMatrix.cpp  ledMatrix.h  ledMatrixDriver.cpp
(+214 files in other folders)
